infra/k8s/gke/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wondrous-rohan-dc7f631b7f-depl
  namespace: apps-release
  labels:
    app: wondrous-rohan-dc7f631b7f
    release: prometheus # Added label for PodMonitor discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wondrous-rohan-dc7f631b7f
      release: prometheus # Added label for PodMonitor discovery
  template:
    metadata:
      labels:
        app: wondrous-rohan-dc7f631b7f
        release: prometheus # Added label for PodMonitor discovery
    spec:
      runtimeClassName: gvisor
      imagePullSecrets:
        - name: aws-ecr-creds
      serviceAccountName: alloy-service-account
      volumes:
      - name: alloy-config
        configMap:
          name: alloy-configmap
          items:
          - key: alloy.river
            path: config.alloy

      - name: podinfo
        downwardAPI:
          items:
          - path: "labels"
            fieldRef:
              fieldPath: metadata.labels
          - path: "annotations"
            fieldRef:
              fieldPath: metadata.annotations
      containers:
      - name: wondrous-rohan-dc7f631b7f
        image: 216084506783.dkr.ecr.ap-south-1.amazonaws.com/backstract_apps:wondrous-rohan-dc7f631b7f
        imagePullPolicy: Always
        ports:
        - containerPort: 7070
          name: http # Optional for HTTP traffic
        - containerPort: 7070 #same as the deployed code
          name: metrics # Added port for metrics scraping
        resources:
          requests:
            memory: "300Mi"
            cpu: "50m"
          limits:
            memory: "300Mi"
            cpu: "250m"

      - name: alloy-sidecar
        image: grafana/alloy:latest
        args:
        - "run"
        - "/etc/alloy/config.alloy"
        - "--server.http.listen-addr=0.0.0.0:12345"
        ports:
        - name: otlp-grpc
          containerPort: 4317
          protocol: TCP
        - name: otlp-http
          containerPort: 4318
          protocol: TCP
        - name: alloy-http
          containerPort: 12345
          protocol: TCP
        volumeMounts:
        - name: alloy-config
          mountPath: /etc/alloy
        - name: podinfo
          mountPath: /etc/podinfo
          readOnly: true
        resources:
          requests:
            memory: "50Mi"
            cpu: "25m"
          limits:
            memory: "100Mi"
            cpu: "100m"
