infra/k8s/gke/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: wondrous-rohan-route
  namespace: apps-release
spec:
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: lcnc-gateway
    namespace: default    # Crucial: Points to the Gateway in 'default'
    hostnames:
    - "cc1fbde45ead-in-south-02.mayson.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /us-west-1-backstractelb-eaea2f-coll-40b587e0e76f464c8cb78a581d06c1c5
    backendRefs:
    - name: wondrous-rohan-dc7f631b7f-srv
      port: 80
